[package]
name = "file-rs"
version = "0.2.0"
authors = ["XDream8 <WolfsDream@proton.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/file-rs"
description = "a tool for determining file types"

[dependencies]
itertools = "0.11.0"
mime_guess = "2.0.4"
num_cpus = "1.0"
rayon = "1.6.1"
seahorse = "2.1"

[profile.release]
lto = "thin"

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
