[package]
name = "file-rs"
version = "0.2.2"
authors = ["XDream8 <WolfsDream@proton.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/file-rs"
description = "a tool for determining file types"

[dependencies]
mime_guess = { version = "2.0.4", optional = true }
infer = { version = "0.15.0", optional = true }
itertools = "0.11.0"
rayon = "1.7.0"
seahorse = "2.1"

[features]
default = ["infer"]
infer = ["dep:infer"]
mime_guess = ["dep:mime_guess"]

[profile.release]
lto = "thin"

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
