[package]
name = "file-rs"
version = "0.2.4"
authors = ["XDream8 <WolfsDream@proton.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/XDream8/file-rs"
description = "a tool for determining file types"

[dependencies]
mime_guess = { version = "2.0.5", optional = true }
infer = { version = "0.19.0", optional = true }
itertools = "0.14.0"
rayon = "1.11.0"
argh = "0.1.14"

[features]
default = ["infer"]
infer = ["dep:infer"]
mime_guess = ["dep:mime_guess"]

[profile.release]
lto = "thin"

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
